towards nats isolation (#17)
